<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:id="@+id/text_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableTint="?attr/colorSecondary"
                android:gravity="center"
                android:layout_marginBottom="32dp"
                android:text="@string/text_welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/baseline_qr_code_scanner_64"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/text_protect_yourself"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_protect_yourself"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/baseline_security_48"
                app:drawableTint="?attr/colorSecondary"
                android:drawablePadding="10dp"
                />

            <TextView
                android:id="@+id/text_locate_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_locate_nearby"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/baseline_assistant_navigation_48"
                app:drawableTint="?attr/colorSecondary"
                android:drawablePadding="10dp" />


            <TextView
                android:id="@+id/text_help_keep_area_safe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_help_keep_area_safe"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/baseline_comment_48"
                app:drawableTint="?attr/colorSecondary"
                android:drawablePadding="10dp"
                />

        <Button
            android:id="@+id/button_connect_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="88dp"
            android:gravity="center"
            android:text="@string/button_connect_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.613"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>